# backend/src/auth/dto/email-or-phone.dto.ts
@@ -1,0 +1,8 @@
+import { IsString, MinLength } from 'class-validator';
+
+// /auth/register-request ve /auth/forgot-password ayni govdeyi paylasir.
+export class EmailOrPhoneDto {
+  @IsString()
+  @MinLength(3)
+  emailOrPhone: string;
+}
