# backend/src/auth/dto/login.dto.ts
@@ -1,0 +1,11 @@
+import { IsString, MinLength } from 'class-validator';
+
+export class LoginDto {
+  @IsString()
+  @MinLength(3)
+  emailOrPhone: string;
+
+  @IsString()
+  @MinLength(1)
+  password: string;
+}
