# backend/src/auth/dto/select-congress.dto.ts
@@ -1,0 +1,7 @@
+import { IsString, MinLength } from 'class-validator';
+
+export class SelectCongressDto {
+  @IsString()
+  @MinLength(1)
+  congressId: string;
+}
